# DPP_Chaos

./: app.py  bifurcation_map.ipynb  bifurcation_pts.npy  notebook.ipynb  pyproject.toml
bifurcation/: bifurcation_gammas.npy  bifurcation_map.ipynb
