[project]
name = "dpp-chaos"
version = "0.1.0"
description = ""
authors = [
    {name = "Henry Rodriguez",email = "henry.rodriguez@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.15.1,<2.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
